# thea-ia

./: .coverage  .env  .env.example  .gitignore  .railwayignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lite  Dockerfile.optimized  Makefile  README-complete.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  audit actualizados (AUDITORIA, CHECKLIST, ROADMAP, STANDARDS)  conftest.py  context_store.json  create_tables.py  db_connection.py  docker-compose.yml  estructura.txt  estructura_src.txt  mkdocs.yml  project_structure.txt  prueba_router.py  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  settings.py  sospechosos.txt  tatus  telegram_bot.py  telegram_theaiabot.py  test_bot.py
.archive/: codigo_completo.txt
.devcontainer/: devcontainer.json.save
.github/workflows/: ci.yml  thea_ci.yml
.railway/: project.json
antiguothea/: db_connection.py  settings.py  telegram_theaiabot.py
antiguothea/thea-ai/: main.py
docs/: ARCHITECTURE.md  CHAGELOG.md  CHANGELOG.md  DIARY.md  DICCIONARIO-VARIABLES.md  ESQUEMAS-DATABASE.md  EVOLUCION-PROCESO.md  FAQ.md  README-complete.md  README-diario.md  README.md  ROADMAP.md  SCHEMA.md  SECURITY.md  api_reference.md  devops_readme.md  index.md  roadmap_auditoria.md  roadmap_theia_3.md  team_directory.md  training_onboarding.md
docs/adapters/: adapter-rest.md  adapter-slack.md  adapter_discord.md  adapter_telegram.md  adapter_whatsapp.md  adapters-best-practices.md  overview.md
docs/agents/: agent-fallback.md  agent-help.md  agent-reminder.md  agent-scheduler.md  agent_agenda.md  agent_event.md  agent_note.md  agent_query.md  best-practices.md  overview.md
docs/api/: API-REFERENCE-EXTENDED.md  adapters.md  api_adapters.md  api_agents.md  api_core.md  api_index.md  core.md
docs/architecture/: architecture.md  decisions.md  deployment.md  diagrams.md  fsmengine.md  overview.md  scalability.md
docs/archive/: CONTRIBUTING.md  DICCIONARIO-VARIABLES.md  ESQUEMAS-DATABASE-ACTUALIZADA.md  MIGRACIONES.md  ROADMAP.md  SCRIPTS.md  SUMMARY.md  (+4 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0292963a2324ab8f___init___py.html  z_046885f30ec33c19___init___py.html  z_046885f30ec33c19_handler_py.html  z_1165472c6ce65303___init___py.html  z_1165472c6ce65303_context_py.html  z_1165472c6ce65303_event_py.html  z_1165472c6ce65303_note_py.html  z_1165472c6ce65303_user_py.html  z_1fbf869646fd0d90___init___py.html  z_1fbf869646fd0d90_health_py.html  z_1fbf869646fd0d90_metrics_py.html  z_200a328eab079369___init___py.html  z_200a328eab079369_exceptions_py.html  z_200a328eab079369_formatters_py.html  z_200a328eab079369_validators_py.html  z_239aeac63d47efc1___init___py.html  z_239aeac63d47efc1_base_agent_py.html  z_239aeac63d47efc1_registry_py.html  z_36270d9b9acbf6ca___init___py.html  z_36270d9b9acbf6ca_main_py.html  z_45be3d107cefc002___init___py.html  z_45be3d107cefc002_logging_config_py.html  z_45be3d107cefc002_settings_py.html  z_52fbb02d44f1ce18___init___py.html  z_52fbb02d44f1ce18_handler_py.html  z_5b36c16cbb61dca3___init___py.html  z_5b36c16cbb61dca3_handler_py.html  z_6d57ae235ad366fd___init___py.html  z_6d57ae235ad366fd_entity_extractor_py.html  z_6d57ae235ad366fd_intent_detector_py.html  z_7a91d99cd5f89890___init___py.html  z_7a91d99cd5f89890_base_py.html  z_7a91d99cd5f89890_context_repository_py.html  z_7a91d99cd5f89890_event_repository_py.html  z_7a91d99cd5f89890_note_repository_py.html  z_7a91d99cd5f89890_user_repository_py.html  (+27 more)
migrations/: README.md  env.py  script.py.mako
scripts/: README.md  backup.sh  deploy.sh  entrypoint.sh  lint.sh  migrate.sh  setup.sh  setup_codespace.sh  setup_env.sh  test_runner.sh
thea-ai/: requirements.txt
theaia/: README.md  docker-compose.yml  requirements.txt
(+396 files in other folders)
